fixing word wrap issues

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -185,6 +185,7 @@ main {
     margin-bottom: auto;
     width: 100%;
     height: fit-content;
+    word-wrap: break-word;
     overflow-wrap: break-word;
 }
 
